# Lumous

./: .gitignore  .mcp.json  CLAUDE.md  PLAN.md  README.md  RELEASES.md  package-lock.json  package.json  vite.config.ts
.claude/: settings.local.json
.claude/skills/lumous-design/: SKILL.md
.claude/skills/lumous-release/: SKILL.md
mcp-server/: index.ts  package-lock.json  package.json  tsconfig.json
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/components/: BackgroundWisps.tsx  BoardSettingsModal.tsx  BoardView.tsx  Card.tsx  CardModal.tsx  Column.tsx  CompactView.tsx  CompletionHeatmap.tsx  ConfirmDialog.tsx  ErrorBoundary.tsx  MagicianModal.tsx  NewBoardModal.tsx  NewCardInput.tsx  SearchOverlay.tsx  ShadowBoardView.tsx  Sidebar.tsx  SparkleEffect.tsx  SyncSettingsModal.tsx  SyncStatus.tsx  TodayBoardView.tsx  UpdateChecker.tsx  WizardCelebration.tsx  WizardPanel.tsx
src/hooks/: useBoard.ts  useBoards.ts  useCardResearch.ts  useSync.ts  useTodayBoard.ts  useWindowSize.ts
src/lib/: logger.ts  markdown.tsx  storage.ts  types.ts
